backend/root/records/4/compile_err.txt
/home/shadowiterator/2018SE3_OJ/backend/root/records/4/4.code:2:1: error: stray ‘\’ in program
 \x
 ^
In file included from /usr/include/stdio.h:33:0,
                 from /home/shadowiterator/2018SE3_OJ/backend/root/records/4/4.code:3:
/usr/lib/gcc/x86_64-linux-gnu/5/include/stddef.h:216:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘typedef’
 typedef __SIZE_TYPE__ size_t;
 ^
In file included from /usr/include/stdio.h:74:0,
                 from /home/shadowiterator/2018SE3_OJ/backend/root/records/4/4.code:3:
/usr/include/libio.h:302:3: error: unknown type name ‘size_t’
   size_t __pad5;
   ^
/usr/include/libio.h:305:67: error: ‘size_t’ undeclared here (not in a function)
   char _unused2[15 * sizeof (int) - 4 * sizeof (void *) - sizeof (size_t)];
                                                                   ^
/usr/include/libio.h:333:62: error: expected declaration specifiers or ‘...’ before ‘size_t’
 typedef __ssize_t __io_read_fn (void *__cookie, char *__buf, size_t __nbytes);
                                                              ^
/usr/include/libio.h:342:6: error: expected declaration specifiers or ‘...’ before ‘size_t’
      size_t __n);
      ^
/usr/include/libio.h:464:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘_IO_sgetn’
 extern _IO_size_t _IO_sgetn (_IO_FILE *, void *, _IO_size_t);
                   ^
In file included from /home/shadowiterator/2018SE3_OJ/backend/root/records/4/4.code:3:0:
/usr/include/stdio.h:319:35: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern FILE *fmemopen (void *__s, size_t __len, const char *__modes)
                                   ^
/usr/include/stdio.h:325:47: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern FILE *open_memstream (char **__bufloc, size_t *__sizeloc) __THROW __wur;
                                               ^
/usr/include/stdio.h:337:20: error: expected declaration specifiers or ‘...’ before ‘size_t’
       int __modes, size_t __n) __THROW;
                    ^
/usr/include/stdio.h:344:10: error: expected declaration specifiers or ‘...’ before ‘size_t’
          size_t __size) __THROW;
          ^
/usr/include/stdio.h:386:44: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int snprintf (char *__restrict __s, size_t __maxlen,
                                            ^
/usr/include/stdio.h:390:45: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int vsnprintf (char *__restrict __s, size_t __maxlen,
                                             ^
/usr/include/stdio.h:666:11: error: expected declaration specifiers or ‘...’ before ‘size_t’
           size_t *__restrict __n, int __delimiter,
           ^
/usr/include/stdio.h:669:9: error: expected declaration specifiers or ‘...’ before ‘size_t’
         size_t *__restrict __n, int __delimiter,
         ^
/usr/include/stdio.h:679:8: error: expected declaration specifiers or ‘...’ before ‘size_t’
        size_t *__restrict __n,
        ^
/usr/include/stdio.h:709:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fread’
 extern size_t fread (void *__restrict __ptr, size_t __size,
               ^
/usr/include/stdio.h:715:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fwrite’
 extern size_t fwrite (const void *__restrict __ptr, size_t __size,
               ^
/usr/include/stdio.h:737:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fread_unlocked’
 extern size_t fread_unlocked (void *__restrict __ptr, size_t __size,
               ^
/usr/include/stdio.h:739:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fwrite_unlocked’
 extern size_t fwrite_unlocked (const void *__restrict __ptr, size_t __size,
               ^
In file included from /usr/include/stdio.h:936:0,
                 from /home/shadowiterator/2018SE3_OJ/backend/root/records/4/4.code:3:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:23:61: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int __sprintf_chk (char *__restrict __s, int __flag, size_t __slen,
                                                             ^
/usr/include/x86_64-linux-gnu/bits/stdio2.h:25:62: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int __vsprintf_chk (char *__restrict __s, int __flag, size_t __slen,
                                                              ^
/usr/include/x86_64-linux-gnu/bits/stdio2.h:52:50: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int __snprintf_chk (char *__restrict __s, size_t __n, int __flag,
                                                  ^
/usr/include/x86_64-linux-gnu/bits/stdio2.h:53:7: error: expected declaration specifiers or ‘...’ before ‘size_t’
       size_t __slen, const char *__restrict __format,
       ^
/usr/include/x86_64-linux-gnu/bits/stdio2.h:55:51: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern int __vsnprintf_chk (char *__restrict __s, size_t __n, int __flag,
                                                   ^
/usr/include/x86_64-linux-gnu/bits/stdio2.h:56:8: error: expected declaration specifiers or ‘...’ before ‘size_t’
        size_t __slen, const char *__restrict __format,
        ^
In file included from /usr/include/features.h:367:0,
                 from /usr/include/stdio.h:27,
                 from /home/shadowiterator/2018SE3_OJ/backend/root/records/4/4.code:3:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:61:1: error: expected declaration specifiers or ‘...’ before ‘size_t’
 __NTH (snprintf (char *__restrict __s, size_t __n,
 ^
/usr/include/x86_64-linux-gnu/bits/stdio2.h:74:1: error: expected declaration specifiers or ‘...’ before ‘size_t’
 __NTH (vsnprintf (char *__restrict __s, size_t __n,
 ^
In file included from /usr/include/stdio.h:936:0,
                 from /home/shadowiterator/2018SE3_OJ/backend/root/records/4/4.code:3:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:241:49: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern char *__fgets_chk (char *__restrict __s, size_t __size, int __n,
                                                 ^
In file included from /usr/include/features.h:367:0,
                 from /usr/include/stdio.h:27,
                 from /home/shadowiterator/2018SE3_OJ/backend/root/records/4/4.code:3:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:246:14: error: expected declaration specifiers or ‘...’ before ‘size_t’
 extern char *__REDIRECT (__fgets_chk_warn,
              ^
In file included from /usr/include/stdio.h:936:0,
                 from /home/shadowiterator/2018SE3_OJ/backend/root/records/4/4.code:3:
/usr/include/x86_64-linux-gnu/bits/stdio2.h: In function ‘fgets’:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:260:20: error: expected ‘)’ before ‘__n’
       if ((size_t) __n > __bos (__s))
                    ^
/usr/include/x86_64-linux-gnu/bits/stdio2.h: At top level:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:266:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘__fread_chk’
 extern size_t __fread_chk (void *__restrict __ptr, size_t __ptrlen,
               ^
In file included from /usr/include/features.h:367:0,
                 from /usr/include/stdio.h:27,
                 from /home/shadowiterator/2018SE3_OJ/backend/root/records/4/4.code:3:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:269:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘__fread_alias’
 extern size_t __REDIRECT (__fread_alias,
               ^
/usr/include/x86_64-linux-gnu/bits/stdio2.h:273:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘__fread_chk_warn’
 extern size_t __REDIRECT (__fread_chk_warn,
               ^
In file included from /usr/include/stdio.h:936:0,
                 from /home/shadowiterator/2018SE3_OJ/backend/root/records/4/4.code:3:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:282:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fread’
 fread (void *__restrict __ptr, size_t __size, size_t __n,
 ^
/usr/include/x86_64-linux-gnu/bits/stdio2.h:327:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘__fread_unlocked_chk’
 extern size_t __fread_unlocked_chk (void *__restrict __ptr, size_t __ptrlen,
               ^
In file included from /usr/include/features.h:367:0,
                 from /usr/include/stdio.h:27,
                 from /home/shadowiterator/2018SE3_OJ/backend/root/records/4/4.code:3:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:330:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘__fread_unlocked_alias’
 extern size_t __REDIRECT (__fread_unlocked_alias,
               ^
/usr/include/x86_64-linux-gnu/bits/stdio2.h:334:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘__fread_unlocked_chk_warn’
 extern size_t __REDIRECT (__fread_unlocked_chk_warn,
               ^
In file included from /usr/include/stdio.h:936:0,
                 from /home/shadowiterator/2018SE3_OJ/backend/root/records/4/4.code:3:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:343:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘fread_unlocked’
 fread_unlocked (void *__restrict __ptr, size_t __size, size_t __n,
 ^
/home/shadowiterator/2018SE3_OJ/backend/root/records/4/4.code: In function ‘main’:
/home/shadowiterator/2018SE3_OJ/backend/root/records/4/4.code:8:5: warning: ignoring return value of ‘scanf’, declared with attribute warn_unused_result [-Wunused-result]
     scanf("%d %d",&a,&b);
     ^
